samples/_failures_safe/1761362162_fc2390_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b4fee21.c: In function ‘main’:
./samples/SAFE/__tmp_5b4fee21.c:158:24: error: expected ‘)’ at end of input
  158 |         if (choice == 5
      |            ~           ^
      |                        )
./samples/SAFE/__tmp_5b4fee21.c:158:9: error: expected declaration or statement at end of input
  158 |         if (choice == 5
      |         ^~
./samples/SAFE/__tmp_5b4fee21.c:158:9: error: expected declaration or statement at end of input
